# postProcess_v2

./: .gitignore  CMakeLists.txt  README.md  common.cpp  common.hh  compile.sh  convert.cpp  createCoincidences.cpp  create_logic_coincidence.cpp  data.lm  detectorListInsert12x6.txt  info  infoLogicDet  info_logic_detectors.cpp  info_newInsert  penred2Coincidence  penred2Logic  perfect2Coincidence  perfectCoin2LM.cpp  plotM.gplot
.cache/clangd/index/: coincidence_engine.cpp.7137AAD9EC13B90C.idx  coincidence_engine.hh.FEECD8D10B7BC8C7.idx  config.cpp.BC62A7A16915033F.idx  config.hh.A0CD0E21D1E95EC1.idx  geometry.cpp.5952905BB9C76986.idx  geometry.hh.E71C6C7BD6216C26.idx  histogram_writer.cpp.6CC8A15EF4F7FABA.idx  histograms.cpp.3022501A922EFA64.idx  histograms.hh.45D312E63FAB6212.idx  lm_writer.cpp.622ABED205504F93.idx  lm_writer.hh.00157700AA64A1C4.idx  main.cpp.42688BB60CEFC560.idx  math_utils.hh.E53717C2E545F7FC.idx  pair_list.cpp.AA21C19B996A336E.idx  pair_list.hh.D36C8091A5CABC76.idx  (+5 more)
config/: detectorListInsert12x6.txt  detectorList_oldInsert.txt  info  info_newInsert  pairListInsertHw.txt  template_config
scripts/: readLORhist.py
src/: main.cpp
src/coincidence/: coincidence_engine.cpp  coincidence_engine.hh
src/common/: constants.hh  math_utils.hh  types.hh
src/config/: config.cpp  config.hh
src/geometry/: geometry.cpp  geometry.hh  projection.cpp  projection.hh
src/histogram/: histogram_writer.cpp  histograms.cpp  histograms.hh
src/io/: pair_list.cpp  pair_list.hh  singles_reader.cpp  singles_reader.hh
src/output/: lm_writer.cpp  lm_writer.hh
